--- a/src/app/shared/nav-bar/nav-bar.component.html
+++ b/src/app/shared/nav-bar/nav-bar.component.html
@@ -14,23 +14,18 @@
         {{item.label}}
       </mat-list-item>-->
 
-      <mat-expansion-panel hideToggle>
-        <mat-expansion-panel-header>
-          <mat-panel-title>
-            <mat-list-item>
-              Cita Medica
-            </mat-list-item>
-          </mat-panel-title>
-
-        </mat-expansion-panel-header>
-        <mat-list-item routerLink="/cita">
-          Registrar
-        </mat-list-item>
-        <mat-list-item routerLink="/cita/search">
-          Ver citas
-        </mat-list-item>
-      </mat-expansion-panel>
-
+      <mat-list-item routerLink="/cita">
+        Inicio
+      </mat-list-item>
+      <mat-list-item [routerLink]="['/producto']">
+        Productos
+      </mat-list-item>
+      <mat-list-item [routerLink]="['/about']">
+        Nosotros
+      </mat-list-item>
+      <mat-list-item [routerLink]="['/contact']">
+        Contacto
+      </mat-list-item>
     </mat-nav-list>
 
   </mat-sidenav>
