--- a/src/app/producto/pages/detalle/detalle.component.css
+++ b/src/app/producto/pages/detalle/detalle.component.css
@@ -26,10 +26,25 @@
 }
 #producto-img-lista{
   width: inherit;
-  display: flex;
-  flex-direction: row;
 }
 .producto-img-lista-item{
   width: 4vw;
   margin: 1rem;
 }
+#producto-img-main{
+  margin-top: 5%;
+  max-height: 450px;
+  height: 60vh;
+  width: auto;
+}
+#producto-titulo{
+  width: 100%;
+  justify-content: right!important;
+}
+#producto-titulo h3{
+  width: 60%;
+  color: white;
+  border-radius: 10px  0 0 10px;
+  padding: 0.7rem;
+}
+
