--- a/src/app/shared/nav-bar/nav-bar.component.html
+++ b/src/app/shared/nav-bar/nav-bar.component.html
@@ -37,6 +37,8 @@
     <span>Aqui va el icono</span>
   </mat-toolbar>
 </div>
+
+
 <div *ngIf="windowWidth>=970">
   <!-- Navbar -->
 <nav class="navbar navbar-expand-lg navbar-light bg-light">
@@ -48,7 +50,7 @@
       <!-- Navbar brand -->
       <a class="navbar-brand" href="#">
         <img
-          src="https://mdbcdn.b-cdn.net/img/logo/mdb-transaprent-noshadows.webp"
+          src="../../../assets/img/logo.png"
           height="15"
           alt="MDB Logo"
           loading="lazy"
