--- a/src/app/contact/pages/contact/contact.component.html
+++ b/src/app/contact/pages/contact/contact.component.html
@@ -21,7 +21,7 @@
           <p>Nam auctor consequat ex, non dignissim velit. Maecenas tincidunt volutpat commodo.</p>
         </div>
         <div class="contact-banner-item-contacto text-center">
-          <p>contacto@gmail.com</p>
+          <p>contacto&#64;gmail.com</p>
         </div>
       </div>
 
@@ -33,7 +33,7 @@
           <p>Nam auctor consequat ex, non dignissim velit. Maecenas tincidunt volutpat commodo.</p>
         </div>
         <div class="contact-banner-item-contacto text-center">
-          <p>contacto@gmail.com</p>
+          <p>contacto&#64;gmail.com</p>
         </div>
       </div>
 
@@ -45,7 +45,7 @@
           <p>Nam auctor consequat ex, non dignissim velit. Maecenas tincidunt volutpat commodo.</p>
         </div>
         <div class="contact-banner-item-contacto text-center">
-          <p>contacto@gmail.com</p>
+          <p>contacto&#64;gmail.com</p>
         </div>
       </div>
 
