--- a/src/app/about/pages/about/about.component.html
+++ b/src/app/about/pages/about/about.component.html
@@ -1,5 +1,5 @@
 <mat-sidenav-container fullscreen>
-  <app-nav-bar></app-nav-bar>
+  <app-nav-bar-blue></app-nav-bar-blue>
   <!-- Cabecera -->
 <header class="text-center">
   <div class="container">
