--- a/src/app/contact/pages/contact/contact.component.css
+++ b/src/app/contact/pages/contact/contact.component.css
@@ -1,7 +1,7 @@
 #contact-banner{
   width: 100%;
   height: 85vh;
-  background-color: rgb(246, 147, 147);
+  background-color: #24aff4;
   z-index: 1;
   position: absolute;
 }
