--- a/src/app/home-page/pages/home-page/home-page.component.css
+++ b/src/app/home-page/pages/home-page/home-page.component.css
@@ -2,5 +2,6 @@
   width: 30vw;
 }
 .carousel-item{
-  background-image: url("../../../../assets/img/banner1.png");
+  background-image: url("../../../../assets/img/banner1.jpg");
 }
+
