--- a/src/app/producto/pages/producto/producto.component.css
+++ b/src/app/producto/pages/producto/producto.component.css
@@ -5,6 +5,12 @@
   width: 18vw;
   max-width: 400px;
   min-width: 250px;
+  min-height: 385px;
+  box-shadow: 4px 10px 10px #a4c8e5!important;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: space-between;
 }
 
 .example-header-image {
