--- a/src/app/producto/pages/producto/producto.component.html
+++ b/src/app/producto/pages/producto/producto.component.html
@@ -1,6 +1,6 @@
 <mat-sidenav-container fullscreen>
-  <app-nav-bar></app-nav-bar>
-  <div class="container">
+  <app-nav-bar-blue></app-nav-bar-blue>
+  <div class="container mt-5">
     <div id="buscador" class="m-2">
       <!--<h3>Filtro</h3>-->
       <div id="buscador-content" class="d-flex flex-wrap align-items-center justify-content-center ">
@@ -35,8 +35,8 @@
 
         </div>
         <div id="buscar-buttons" class="d-flex flex-column justify-content-center align-items-center ">
-          <button mat-raised-button color="accent" (click)="filtrar()" class="mb-2" >Buscar</button>
-          <button mat-raised-button color="accent" (click)="limpiarFiltro()" >Limpiar</button>
+          <button mat-raised-button color="accent" (click)="filtrar()" class="mb-2 celeste" >Buscar</button>
+          <button mat-raised-button color="accent" (click)="limpiarFiltro()" class="celeste" >Limpiar</button>
         </div>
 
       </div>
@@ -56,7 +56,7 @@
           <img class="content-img" mat-card-image src="{{item.imagen_url[0]}}" alt="Photo of {{item.name}}">
         </mat-card-content>
         <mat-card-actions class="d-flex flex-row justify-content-center">
-          <a mat-raised-button color="accent" [routerLink]="['/producto/detalle', item.id]">Ver más</a>
+          <button mat-raised-button color="accent" class="red"  [routerLink]="['/producto/detalle', item.id]">Ver más</button>
         </mat-card-actions>
       </mat-card>
 
