--- a/src/app/shared/nav-bar/nav-bar.component.css
+++ b/src/app/shared/nav-bar/nav-bar.component.css
@@ -1,13 +1,19 @@
 nav{
   background-color: white !important;
+  position: fixed;
+  z-index: 99;
+  width: 100%;
+  height: 60px;
 }
 a{
   color: black;
+  font-family: square;
+  font-size: 17px;
 }
 a:hover{
   color: rgb(160, 153, 153);
 }
 img{
-  width: 130px;
-  height: auto;
+  height: 60px;
+  width: auto;
 }
