--- a/src/app/shared/footer/footer.component.html
+++ b/src/app/shared/footer/footer.component.html
@@ -5,7 +5,7 @@
   >
     <div class="d-flex flex-wrap align-items-center">
       <a href="/#" class="d-flex align-items-center p-0 text-dark">
-        <img alt="logo" src="../img/logo.png" width="30px" />
+        <img alt="logo" src="../../../assets/img/logo.png"/>
         <span class="ms-4 h5 mb-0 font-weight-bold">INDUQUIM</span>
       </a>
       <span
@@ -14,8 +14,7 @@
                       margin: -2rem 0px -1.5rem 1rem;
                       color: #c4c4c4;
                     "
-        >&#8226;</span
-      >
+        >&#8226;</span>
       <small class="ms-2">&copy; Induquim, 2023. All rights reserved.</small>
     </div>
     <div>
