--- a/src/app/producto/pages/producto/producto.component.html
+++ b/src/app/producto/pages/producto/producto.component.html
@@ -56,7 +56,7 @@
           <img class="content-img" mat-card-image src="{{item.imagen_url[0]}}" alt="Photo of {{item.name}}">
         </mat-card-content>
         <mat-card-actions class="d-flex flex-row justify-content-center">
-          <button mat-raised-button color="accent" class="red"  [routerLink]="['/producto/detalle', item.id]">Ver más</button>
+          <button mat-raised-button color="accent" class="celeste"  [routerLink]="['/producto/detalle', item.id]">Ver más</button>
         </mat-card-actions>
       </mat-card>
 
