--- a/src/app/shared/banner/banner.component.css
+++ b/src/app/shared/banner/banner.component.css
@@ -1,26 +1,30 @@
 #banner{
   background-image: url('../../../assets/img/banner1.jpg');
-  height: 80vh;
+  width: 100%;
+  min-height: 20vh;
   background-repeat: no-repeat;
   background-attachment: fixed;
-  background-size: contain;
+  background-size: cover;
+  transform: translateY(60px);
 }
 h2{
   color: white;
-  font-size: 200%;
+  font-size: 25px
 }
 p{
+  font-size: 16px;
   color: white;
 }
 h1{
   color: #24aff4;
-  font-size: 500%;
+  font-size: 4vw;
 }
 h3{
   color: white;
   margin-top: 14vh;
 }
 #banner-descripcion{
+  height: 100%;
   width: 100%;
   display: flex;
   flex-direction: row;
@@ -36,13 +40,16 @@ button{
   background-color: white;
 }
 a{
+  width: 100px;
+  height: 40px;
   text-decoration: none;
   color: white;
+  font-size: 16px;
 }
 #banner-texto{
   background-color: rgba(0, 0, 0, 0.41);
   width: 100%;
-  height: 70%;
+  height: 50%;
   display: flex;
   flex-direction: column;
   justify-content: center;
