--- a/src/app/shared/main/main.component.html
+++ b/src/app/shared/main/main.component.html
@@ -1,4 +1,4 @@
-<div class="d-flex flex-column justify-content-center align-items-center mt-5" id="main">
+<div class="d-flex flex-column justify-content-center align-items-center" id="main">
   <h1 class="text-center mb-5">Lo que te ofrecemos</h1>
   <div id="main-descripcion-oferta" class="d-flex flex-wrap justify-content-center align-items-center">
     <div class="main-descripcion-oferta-item" (mouseenter)="cambiarColorHover($event)" (mouseleave)="cambiarColorHover($event)">
@@ -24,7 +24,7 @@
   </div>
 </div>
 
-<div class="d-flex flex-column justify-content-center align-items-center mt-5" id="all-products">
+<div class="d-flex flex-column justify-content-center align-items-center" id="all-products">
   <h1 class="text-center mb-2">Algunos de nuestros productos</h1>
   <div id="lista-productos" class="d-flex flex-column justify-content-center align-items-center">
 
@@ -88,7 +88,7 @@
         <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="1" aria-label="Slide 2"></button>
         <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="2" aria-label="Slide 3"></button>
       </div>
-      <div class="carousel-inner">
+      <div class="carousel-inner" id="carouselExampleIndicators-inner">
         <div class="carousel-item active">
           <div class="contenedor d-flex flex-wrap justify-content-center align-items-center" id="contenedor1">
             <mat-card class="example-card m-3" *ngFor="let item of listaProductos1">
@@ -101,7 +101,7 @@
                 <img class="content-img" mat-card-image src="{{item.imagen_url[0]}}" alt="Photo of {{item.name}}">
               </mat-card-content>
               <mat-card-actions class="d-flex flex-row justify-content-center">
-                <a mat-raised-button color="accent" [routerLink]="['/producto/detalle', item.id]">Ver más</a>
+                <button mat-raised-button color="accent" [routerLink]="['/producto/detalle', item.id]" class="red">Ver más</button>
               </mat-card-actions>
             </mat-card>
           </div>
@@ -118,7 +118,7 @@
                 <img class="content-img" mat-card-image src="{{item.imagen_url[0]}}" alt="Photo of {{item.name}}">
               </mat-card-content>
               <mat-card-actions class="d-flex flex-row justify-content-center">
-                <a mat-raised-button color="accent" [routerLink]="['/producto/detalle', item.id]">Ver más</a>
+                <button mat-raised-button color="accent" [routerLink]="['/producto/detalle', item.id]" class="red">Ver más</button>
               </mat-card-actions>
             </mat-card>
           </div>
@@ -135,7 +135,7 @@
                 <img class="content-img" mat-card-image src="{{item.imagen_url[0]}}" alt="Photo of {{item.name}}">
               </mat-card-content>
               <mat-card-actions class="d-flex flex-row justify-content-center">
-                <a mat-raised-button color="accent" [routerLink]="['/producto/detalle', item.id]">Ver más</a>
+                <button mat-raised-button color="accent" [routerLink]="['/producto/detalle', item.id]" class="red">Ver más</button>
               </mat-card-actions>
             </mat-card>
           </div>
