--- a/src/app/shared/nav-bar/nav-bar.component.css
+++ b/src/app/shared/nav-bar/nav-bar.component.css
@@ -14,6 +14,22 @@ a:hover{
   color: rgb(160, 153, 153);
 }
 img{
-  height: 60px;
+  height: 54px;
+  padding: 3px;
   width: auto;
+}
+mat-sidenav{
+  position: fixed!important;
+  z-index: 99!important;
+}
+mat-nav-list{
+  transform: translateY(60px)!important;
+}
+mat-toolbar{
+  position: fixed!important;
+  z-index: 99!important;
+  height: 60px!important;
+}
+.container{
+  margin: 0!important;
 }
