--- a/src/app/shared/nav-bar/nav-bar.component.html
+++ b/src/app/shared/nav-bar/nav-bar.component.html
@@ -15,16 +15,16 @@
       </mat-list-item>-->
 
       <mat-list-item routerLink="/cita">
-        Inicio
+        INICIO
       </mat-list-item>
       <mat-list-item [routerLink]="['/producto']">
-        Productos
+        PRODUCTOS
       </mat-list-item>
       <mat-list-item [routerLink]="['/about']">
-        Nosotros
+        NOSOTROS
       </mat-list-item>
       <mat-list-item [routerLink]="['/contact']">
-        Contacto
+        CONTACTO
       </mat-list-item>
     </mat-nav-list>
 
@@ -43,7 +43,7 @@
   <!-- Navbar -->
 <nav class="navbar navbar-expand-lg navbar-light bg-light">
   <!-- Container wrapper -->
-  <div class="container-fluid">
+  <div class="container">
 
     <!-- Collapsible wrapper -->
     <div class="d-flex flex-row justify-content-between" [style.width]="navBarLeftWidth">
@@ -59,16 +59,16 @@
       <!-- Left links -->
       <ul class="navbar-nav  d-flex flex-row justify-content-around align-items-center">
         <li class="nav-item">
-          <a class="nav-link" href="#">Inicio</a>
+          <a class="nav-link" href="#">INICIO</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="#" [routerLink]="['/producto']" routerLinkActive="router-link-active">Productos</a>
+          <a class="nav-link" href="#" [routerLink]="['/producto']" routerLinkActive="router-link-active">PRODUCTOS</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="#"  [routerLink]="['/about']">Nosotros</a>
+          <a class="nav-link" href="#"  [routerLink]="['/about']">NOSOTROS</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="#" [routerLink]="['/contact']">Contacto</a>
+          <a class="nav-link" href="#" [routerLink]="['/contact']">CONTACTO</a>
         </li>
       </ul>
       <!-- Left links -->
