--- a/src/app/shared/banner/banner.component.css
+++ b/src/app/shared/banner/banner.component.css
@@ -12,12 +12,15 @@ h2{
   font-size: 25px
 }
 p{
-  font-size: 16px;
+  font-size: 18px;
   color: white;
 }
 h1{
   color: #24aff4;
   font-size: 4vw;
+  font-family: Arial, Helvetica, sans-serif;
+  font-weight: bold;
+
 }
 h3{
   color: white;
@@ -49,7 +52,7 @@ a{
 #banner-texto{
   background-color: rgba(0, 0, 0, 0.41);
   width: 100%;
-  height: 50%;
+  height: 60%;
   display: flex;
   flex-direction: column;
   justify-content: center;
