--- a/src/app/shared/banner/banner.component.html
+++ b/src/app/shared/banner/banner.component.html
@@ -5,7 +5,7 @@
             <h2>Bienvenido a </h2>
             <h1>INDUQUIM S.A.C</h1>
             <hr id="linea">
-            <p class="lead">Ofrecemos vitaminas de alta calidad para mejorar la salud y bienestar de tus animales.</p>
+            <p class="lead">Ofrecemos vitaminas de alta calidad para <br> mejorar la salud y bienestar de tus animales.</p>
             <a href="#productos" class="btn btn-primary btn-lg">Ver Más</a>
         </div>
 
