--- a/src/app/shared/main/main.component.css
+++ b/src/app/shared/main/main.component.css
@@ -84,10 +84,17 @@ h4{
 }
 
 .producto-item{
-  width: 100%;
-  margin-right: 10%;
   margin-top: 7vh;
   margin-bottom: 7vh;
+}
+
+.producto-item-left{
+  width: 85%;
+  margin-right: 15%;
+}
+.producto-item-right{
+  width: 85%;
+  margin-left: 15%;
 }
 /*.last-item{
   margin-bottom: 25vh!important;
@@ -101,7 +108,9 @@ h4{
   min-width: 370px;
 }
 .producto-item-img-fondo img{
-  height: 60vh;
+  min-height: 200px;
+  max-height: 500px;
+  height: 50vw;
   width: auto;
 }
 .producto-item-texto{
@@ -120,7 +129,9 @@ h4{
   min-width: 370px;
 }
 .producto-item-img-fondo2 img{
-  height: 60vh;
+  min-height: 200px;
+  max-height: 500px;
+  height: 50vw;
   width: auto;
 }
 .producto-item-texto2{
@@ -148,7 +159,7 @@ background-color: #d2d2d3;
   height: 400px;
 }*/
 #carouselExampleIndicators{
-  margin-bottom: 5%;
+  margin-bottom: none;
 }
 #all-products{
   width: 100%;
@@ -171,14 +182,13 @@ mat-card-header{
 }
 mat-card-title{
   color: white;
+  font-weight: bold;
 }
 mat-card-subtitle{
   color: white;
 }
 #carouselExampleInterval{
-  margin-top: 4vh;
-  min-height: 500px;
-  min-height: 68vh;
+  min-height: 18vh;
   display: flex;
   flex-direction: column;
   justify-content: center;
@@ -186,8 +196,7 @@ mat-card-subtitle{
 }
 #carouselExampleInterval2{
   margin-top: 4vh;
-  min-height: 500px;
-  min-height: 68vh;
+  min-height: 18vh;
   margin-bottom: 6vh;
   display: flex;
   flex-direction: column;
@@ -203,6 +212,7 @@ mat-card-subtitle{
   overflow: initial;
 }
 .carousel-item{
+  width: 100%;
   height: 80%;
   margin-top: 10%;
 }
