--- a/src/app/shared/main/main.component.html
+++ b/src/app/shared/main/main.component.html
@@ -51,7 +51,7 @@
         <div class="carousel-item" *ngFor="let item of listaProductos; let i = index" [class.active]="i === 0" data-bs-interval="10000">
 
 
-          <div class="producto-item d-flex flex-wrap align-items-center justify-content-center">
+          <div class="producto-item  producto-item-left  d-flex flex-wrap align-items-center justify-content-center">
             <div class="producto-item-img-fondo d-flex flex-row align-items-center justify-content-center ">
               <img src="{{item.imagen_url[0]}}" alt="img de {{item.name}}">
             </div>
@@ -160,7 +160,7 @@
 
         <div class="carousel-item" *ngFor="let item of listaProductosReverso; let i = index" [class.active]="i === 0"  data-bs-interval="10000">
 
-          <div class="producto-item last-item d-flex flex-wrap align-items-center justify-content-center mt-5 mb-5">
+          <div class="producto-item producto-item-right  last-item d-flex flex-wrap align-items-center justify-content-center mt-5 mb-5">
             <div class="producto-item-texto2 d-flex flex-column justify-content-center align-items-center">
               <div class="producto-item-texto-titulo">
                 <h5>{{item.name}}</h5>
