--- a/src/app/shared/nav-bar-blue/nav-bar-blue.component.css
+++ b/src/app/shared/nav-bar-blue/nav-bar-blue.component.css
@@ -1,3 +1,15 @@
+@font-face {
+  font-family: SquareKi;
+  src: url("../../../assets/fonts/sqr721ki.ttf");
+}
+@font-face {
+  font-family: SquareBi;
+  src: url("../../../assets/fonts/sqr721bi.ttf");
+}
+@font-face {
+  font-family: SquareReg;
+  src: url("../../../assets/fonts/Typo_Square_Regular.otf");
+}
 nav {
   background-color: #24aff4 !important;
   position: fixed;
@@ -14,7 +26,7 @@ nav {
 
 a {
   color: white;
-  font-family: square;
+  font-family: SquareReg;
   font-size: 17px;
 }
 
